# brokk-codex-acp

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  PLANS.md  README.md
.github/workflows/: ci.yml  publish-crate.yml  release.yml
docs/upstream/agent-client-protocol/: README.md  brand.md  llms.txt  publications.md  updates.md
docs/upstream/agent-client-protocol/announcements/: acp-agent-registry-stabilized.md  implementation-information.md  logout-method-stabilized.md  sergey-ignatov-lead-maintainer.md  session-close-stabilized.md  session-config-options-stabilized.md  session-info-update-stabilized.md  session-list-stabilized.md  session-resume-stabilized.md  transports-working-group.md
docs/upstream/agent-client-protocol/community/: governance.md
docs/upstream/agent-client-protocol/get-started/: agents.md  architecture.md  clients.md  introduction.md  registry.md
docs/upstream/agent-client-protocol/libraries/: community.md  java.md  kotlin.md  python.md  rust.md  typescript.md
docs/upstream/agent-client-protocol/protocol/v1/: agent-plan.md  authentication.md  content.md  extensibility.md  file-system.md  initialization.md  overview.md  prompt-turn.md  schema.md  session-config-options.md  session-delete.md  session-list.md  session-modes.md  session-setup.md  slash-commands.md  terminals.md  tool-calls.md  transports.md
docs/upstream/agent-client-protocol/rfds/: about.md  acp-agent-registry.md  additional-directories.md  auth-methods.md  boolean-config-option.md  custom-llm-endpoint.md  diff-delete.md  elicitation.md  end-turn-token-usage.md  logout-method.md  mcp-over-acp.md  message-id.md  meta-propagation.md  model-config-category.md  next-edit-suggestions.md  plan-operations.md  proxy-chains.md  request-cancellation.md  rust-sdk-v1.md  session-close.md  session-config-options.md  session-delete.md  session-fork.md  session-info-update.md  session-list.md  session-resume.md  session-usage.md  updates.md
docs/upstream/agent-client-protocol/rfds/v2/: client-filesystem-terminal-capabilities.md  enum-variant-extension.md  message-updates.md  overview.md  plan-variants.md  prompt.md  tool-call-updates.md
src/: agent.rs  app_server.rs  cli.rs  lib.rs  main.rs
tests/: acp_serialized.rs  app_server_client.rs  real_app_server_smoke.rs
